# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

HDF_FRAMEWORKS = "//drivers/hdf/frameworks"

shared_library("hdf_core") {
    sources = [
        "$HDF_FRAMEWORKS/core/shared/src/hdf_io_service.c",
        "$HDF_FRAMEWORKS/ability/sbuf/src/hdf_sbuf.c",
        "../adapter/syscall/src/hdf_syscall_adapter.c"
    ]

    include_dirs = [
        "../adapter/syscall/include",
        "../adapter/vnode/include",
        "$HDF_FRAMEWORKS/core/shared/include",
        "$HDF_FRAMEWORKS/core/host/include",
        "$HDF_FRAMEWORKS/core/manager/include",
        "$HDF_FRAMEWORKS/ability/sbuf/include",
        "$HDF_FRAMEWORKS/include/core",
        "$HDF_FRAMEWORKS/include/utils",
        "$HDF_FRAMEWORKS/utils/include",
        "$HDF_FRAMEWORKS/include/osal",
        "//third_party/bounds_checking_function/include",
    ]

    deps = [
        "//drivers/hdf/lite/adapter/osal/posix:hdf_posix_osal",
        "//third_party/bounds_checking_function:libsec_shared",
    ]

    defines = [
        "__USER__",
    ]

    cflags = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-fsigned-char",
        "-fno-common",
        "-fno-strict-aliasing",
    ]
}

lite_component("hdf_manager") {
    features = [
        ":hdf_core",
    ]
}
