# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

generate_notice_file("want_notice_file") {
    module_name = "want"
    module_source_dir_list = [
        "//third_party/bounds_checking_function",
    ]
}

source_set("want") {
    sources = [
        "src/want.cpp",
    ]
    cflags = [ "-fPIC", "-Wall" ]
    cflags_cc = cflags

    include_dirs = [
        "include",
        "//third_party/bounds_checking_function/include",
        "//utils/native/lite/include",
        "//utils/native/lite/memory",
        "//foundation/aafwk/interfaces/kits/want_lite",
        "//foundation/appexecfwk/interfaces/kits/bundle_lite",
        "//foundation/appexecfwk/frameworks/bundle_lite/include",
        "//foundation/appexecfwk/utils/bundle_lite",
        "//foundation/communication/interfaces/kits/ipc_lite",
        "//kernel/liteos_a/kernel/include",
        "//kernel/liteos_a/kernel/common",
    ]

    defines = [
        "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
    ]
}
